Prevent copyright statement from wrapping, where feasible

--- a/css/footer.css
+++ b/css/footer.css
@@ -82,9 +82,10 @@
  }
 }
 /* Desktop */
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 1024px) {
   .page-footer-info {
     text-align: right;
-    width: 50%;
+    white-space: nowrap;
+    width: 60%;
   }
 }
