--- a/css/main.css
+++ b/css/main.css
@@ -235,8 +235,4 @@ body,
     display: flex;
     justify-content: space-between; 
   }
-  .page-footer-info {
-    text-align: right;
-    width: 50%;
-  }
 }
